--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^3.2.37",
-    "vue-router": "^4.1.2",
-    "vue-select": "^4.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/vue-fontawesome": "^3.0.1"
+    "@fortawesome/vue-fontawesome": "^3.0.1",
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.2",
+    "vue-select": "^4.0.0-beta.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -26,5 +26,5 @@
     "eslint-plugin-vue": "^8.7.1",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0"
-}
+  }
 }
